Workspace/.metadata/.plugins/org.eclipse.cdt.ui/Morse.build.log
19:09:26 **** Build of configuration Debug for project Morse ****
make all 
Building file: ../startup/startup_stm32f303xc.s
Invoking: MCU GCC Assembler
/Users/DrButthurt/PCO_Course/Workspace/Morse/Debug
arm-none-eabi-as -mcpu=cortex-m4 -mthumb -mfloat-abi=hard -mfpu=fpv4-sp-d16 -g -o "startup/startup_stm32f303xc.o" "../startup/startup_stm32f303xc.s"
Finished building: ../startup/startup_stm32f303xc.s
 
Building file: ../Src/gpio.c
Invoking: MCU GCC Compiler
/Users/DrButthurt/PCO_Course/Workspace/Morse/Debug
arm-none-eabi-gcc -mcpu=cortex-m4 -mthumb -mfloat-abi=hard -mfpu=fpv4-sp-d16 '-D__weak=__attribute__((weak))' '-D__packed="__attribute__((__packed__))"' -DUSE_HAL_DRIVER -DSTM32F303xC -I"/Users/DrButthurt/PCO_Course/Workspace/Morse/Inc" -I"/Users/DrButthurt/PCO_Course/Workspace/Morse/Drivers/STM32F3xx_HAL_Driver/Inc" -I"/Users/DrButthurt/PCO_Course/Workspace/Morse/Drivers/STM32F3xx_HAL_Driver/Inc/Legacy" -I"/Users/DrButthurt/PCO_Course/Workspace/Morse/Drivers/CMSIS/Device/ST/STM32F3xx/Include" -I"/Users/DrButthurt/PCO_Course/Workspace/Morse/Drivers/CMSIS/Include"  -Og -g3 -Wall -fmessage-length=0 -ffunction-sections -c -fmessage-length=0 -MMD -MP -MF"Src/gpio.d" -MT"Src/gpio.o" -o "Src/gpio.o" "../Src/gpio.c"
Finished building: ../Src/gpio.c
 
Building file: ../Src/main.c
Invoking: MCU GCC Compiler
/Users/DrButthurt/PCO_Course/Workspace/Morse/Debug
arm-none-eabi-gcc -mcpu=cortex-m4 -mthumb -mfloat-abi=hard -mfpu=fpv4-sp-d16 '-D__weak=__attribute__((weak))' '-D__packed="__attribute__((__packed__))"' -DUSE_HAL_DRIVER -DSTM32F303xC -I"/Users/DrButthurt/PCO_Course/Workspace/Morse/Inc" -I"/Users/DrButthurt/PCO_Course/Workspace/Morse/Drivers/STM32F3xx_HAL_Driver/Inc" -I"/Users/DrButthurt/PCO_Course/Workspace/Morse/Drivers/STM32F3xx_HAL_Driver/Inc/Legacy" -I"/Users/DrButthurt/PCO_Course/Workspace/Morse/Drivers/CMSIS/Device/ST/STM32F3xx/Include" -I"/Users/DrButthurt/PCO_Course/Workspace/Morse/Drivers/CMSIS/Include"  -Og -g3 -Wall -fmessage-length=0 -ffunction-sections -c -fmessage-length=0 -MMD -MP -MF"Src/main.d" -MT"Src/main.o" -o "Src/main.o" "../Src/main.c"
../Src/main.c: In function 'letter':
../Src/main.c:97:5: error: a label can only be part of a statement and a declaration is not a statement
     int symbols[] = {0, 1};
     ^~~
../Src/main.c:100:5: error: a label can only be part of a statement and a declaration is not a statement
     int symbols[] = {1, 0, 0};
     ^~~
../Src/main.c:100:9: error: redefinition of 'symbols'
     int symbols[] = {1, 0, 0};
         ^~~~~~~
../Src/main.c:97:9: note: previous definition of 'symbols' was here
     int symbols[] = {0, 1};
         ^~~~~~~
../Src/main.c:103:5: error: a label can only be part of a statement and a declaration is not a statement
     int symbols[] = {0, 1, 0};
     ^~~
../Src/main.c:103:9: error: redefinition of 'symbols'
     int symbols[] = {0, 1, 0};
         ^~~~~~~
../Src/main.c:100:9: note: previous definition of 'symbols' was here
     int symbols[] = {1, 0, 0};
         ^~~~~~~
../Src/main.c:106:5: error: a label can only be part of a statement and a declaration is not a statement
     int symbols[] = {0, 0};
     ^~~
../Src/main.c:106:9: error: redefinition of 'symbols'
     int symbols[] = {0, 0};
         ^~~~~~~
../Src/main.c:103:9: note: previous definition of 'symbols' was here
     int symbols[] = {0, 1, 0};
         ^~~~~~~
../Src/main.c:109:5: error: a label can only be part of a statement and a declaration is not a statement
     int symbols[] = {1, 0, 1, 1};
     ^~~
../Src/main.c:109:9: error: redefinition of 'symbols'
     int symbols[] = {1, 0, 1, 1};
         ^~~~~~~
../Src/main.c:106:9: note: previous definition of 'symbols' was here
     int symbols[] = {0, 0};
         ^~~~~~~
../Src/main.c:112:5: error: a label can only be part of a statement and a declaration is not a statement
     int symbols[] = {1, 0};
     ^~~
../Src/main.c:112:9: error: redefinition of 'symbols'
     int symbols[] = {1, 0};
         ^~~~~~~
../Src/main.c:109:9: note: previous definition of 'symbols' was here
     int symbols[] = {1, 0, 1, 1};
         ^~~~~~~
../Src/main.c:115:5: error: a label can only be part of a statement and a declaration is not a statement
     int symbols[] = {0, 0, 0, 0};
     ^~~
../Src/main.c:115:9: error: redefinition of 'symbols'
     int symbols[] = {0, 0, 0, 0};
         ^~~~~~~
../Src/main.c:112:9: note: previous definition of 'symbols' was here
     int symbols[] = {1, 0};
         ^~~~~~~
../Src/main.c:118:5: error: a label can only be part of a statement and a declaration is not a statement
     int symbols[] = {1, 0, 0, 0};
     ^~~
../Src/main.c:118:9: error: redefinition of 'symbols'
     int symbols[] = {1, 0, 0, 0};
         ^~~~~~~
../Src/main.c:115:9: note: previous definition of 'symbols' was here
     int symbols[] = {0, 0, 0, 0};
         ^~~~~~~
../Src/main.c:121:5: error: a label can only be part of a statement and a declaration is not a statement
     int symbols[] = {0};
     ^~~
../Src/main.c:121:9: error: redefinition of 'symbols'
     int symbols[] = {0};
         ^~~~~~~
../Src/main.c:118:9: note: previous definition of 'symbols' was here
     int symbols[] = {1, 0, 0, 0};
         ^~~~~~~
../Src/main.c:124:5: error: a label can only be part of a statement and a declaration is not a statement
     int symbols[] = {0, 0, 0, 1};
     ^~~
../Src/main.c:124:9: error: redefinition of 'symbols'
     int symbols[] = {0, 0, 0, 1};
         ^~~~~~~
../Src/main.c:121:9: note: previous definition of 'symbols' was here
     int symbols[] = {0};
         ^~~~~~~
../Src/main.c:127:5: error: a label can only be part of a statement and a declaration is not a statement
     int symbols[] = {1, 1, 0, 0};
     ^~~
../Src/main.c:127:9: error: redefinition of 'symbols'
     int symbols[] = {1, 1, 0, 0};
         ^~~~~~~
../Src/main.c:124:9: note: previous definition of 'symbols' was here
     int symbols[] = {0, 0, 0, 1};
         ^~~~~~~
../Src/main.c:130:5: error: a label can only be part of a statement and a declaration is not a statement
     int symbols[] = {};
     ^~~
../Src/main.c:130:9: error: redefinition of 'symbols'
     int symbols[] = {};
         ^~~~~~~
../Src/main.c:127:9: note: previous definition of 'symbols' was here
     int symbols[] = {1, 1, 0, 0};
         ^~~~~~~
../Src/main.c:129:4: error: label at end of compound statement
    default :
    ^~~~~~~
../Src/main.c:130:9: warning: unused variable 'symbols' [-Wunused-variable]
     int symbols[] = {};
         ^~~~~~~
../Src/main.c:132:26: error: 'symbols' undeclared (first use in this function)
   for (int i=0; i<sizeof(symbols); i++) {
                          ^~~~~~~
../Src/main.c:132:26: note: each undeclared identifier is reported only once for each function it appears in
../Src/main.c: In function 'main':
../Src/main.c:175:5: warning: implicit declaration of function 'HAL_DELAY' [-Wimplicit-function-declaration]
     HAL_DELAY(300);
     ^~~~~~~~~
make: *** [Src/main.o] Error 1

19:09:29 Build Finished (took 2s.889ms)

